@@ -3,6 +3,7 @@ package ca.elitecsp.common.util;
 import ca.elitecsp.common.exception.CustomException;
 import ca.elitecsp.common.exception.ErrorCode;
 
+import java.util.Arrays;
 import java.util.Base64;
 
 /**
@@ -28,7 +29,7 @@ public final class ValidationUtils {
      * @return {@code true} if blank
      */
     public static boolean isBlank(String value) {
-        return value == null || value.trim().isEmpty();
+        return value == null || value.isBlank();
     }
 
     /**
@@ -130,11 +131,9 @@ public final class ValidationUtils {
             throw new CustomException(ErrorCode.INVALID_FILE_TYPE, 400,
                     "CV file is too small to be a valid PDF");
         }
-        for (int i = 0; i < magic.length; i++) {
-            if (fileBytes[i] != magic[i]) {
-                throw new CustomException(ErrorCode.INVALID_FILE_TYPE, 400,
-                        "CV file must be a valid PDF document");
-            }
+        if (!Arrays.equals(fileBytes, 0, magic.length, magic, 0, magic.length)) {
+            throw new CustomException(ErrorCode.INVALID_FILE_TYPE, 400,
+                    "CV file must be a valid PDF document");
         }
     }
 
@@ -179,11 +178,9 @@ public final class ValidationUtils {
             throw new CustomException(ErrorCode.INVALID_FILE_TYPE, 400,
                     "File is too small to be a valid DOCX document");
         }
-        for (int i = 0; i < magic.length; i++) {
-            if (fileBytes[i] != magic[i]) {
-                throw new CustomException(ErrorCode.INVALID_FILE_TYPE, 400,
-                        "DOCX file must be a valid Office Open XML document");
-            }
+        if (!Arrays.equals(fileBytes, 0, magic.length, magic, 0, magic.length)) {
+            throw new CustomException(ErrorCode.INVALID_FILE_TYPE, 400,
+                    "DOCX file must be a valid Office Open XML document");
         }
     }
 }
